samples/_failures_safe/1761715517_8a5400_compile_base_compile_error/stderr.txt
./samples/SAFE/__tmp_2cd99e88.c: In function ‘print_analysis’:
./samples/SAFE/__tmp_2cd99e88.c:141:34: error: missing terminating " character
  141 |     printf("%-20s %-8s %-10s\n", "Word
      |                                  ^~~~~
./samples/SAFE/__tmp_2cd99e88.c:141:5: error: expected expression at end of input
  141 |     printf("%-20s %-8s %-10s\n", "Word
      |     ^~~~~~
./samples/SAFE/__tmp_2cd99e88.c:141:5: error: expected declaration or statement at end of input
